--- a/Frontend/src/Styles/App.less
+++ b/Frontend/src/Styles/App.less
@@ -5,7 +5,7 @@ body {
 }
 
 .app-root {
-    height: 100vh;
+    min-height: 100vh;
     padding: 20px;
     background: linear-gradient(135deg, #E0F7FA 0%, #F8F8FF 100%);
     display: flex;
