--- a/Frontend/src/Components/RecognitionResult/Index.less
+++ b/Frontend/src/Components/RecognitionResult/Index.less
@@ -39,6 +39,7 @@
 }
 
 .object-recognition-result__content {
+    padding: 0 0 40px 0;
     display: flex;
     flex-direction: column;
     gap: 20px;
